--- a/www/index.html
+++ b/www/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="scripts/pageManager.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>AnturioSystems</title>
 </head>
 <body>
+
+
+
+<!-- Barra de Navegação Global -->
+
+
+
 
 <h1>Hello World</h1>
 
@@ -17,6 +25,10 @@
 
 
 
+
+
+
+ <!-- Footer -->
 
 
 </body>
