--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="scripts/pageManager.js"></script>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <title>AnturioSystems</title>
 </head>
 <body>
@@ -15,6 +18,37 @@
 
 
 <!-- Barra de Navegação Global -->
+
+<header>
+    <nav>
+       <div class="menu-icon">
+          <i class="fa fa-bars fa-2x"></i>
+       </div>
+       <div class="logo">
+          LOGO
+       </div>
+       <div class="menu">
+          <ul>
+             <li><a href="#">Home</a></li>
+             <li><a href="#">About</a></li>
+             <li><a href="#">Blog</a></li>
+             <li><a href="#">Contact</a></li>
+             <li><a href="#">Contact</a></li>
+             <li><a href="#">Contact</a></li>
+          </ul>
+       </div>
+    </nav>
+ </header>
+
+
+
+
+
+
+
+
+
+
 
 
 
