Footer_First_Version
Imagens têm de ser melhoradas e aumentar tamanho

--- a/www/footer.html
+++ b/www/footer.html
@@ -5,96 +5,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="scripts/pageManager.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     <title>AnturioSystems</title>
 </head>
-<body>
-<!-- Footer -->
-<!-- Footer -->
-<footer class="bg-dark text-center text-white">
 
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
-  
-      <!-- Grid row -->
-      <div class="row">
-  
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
-  
-          <!-- Content -->
-         <!-- <h5 class="text-uppercase">Footer Content</h5>-->
-          <img src="/img/anturio_logo.png">
-          <p>Here you can use rows and columns to organize your footer content.</p>
-  
-        </div>
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none pb-3">
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">Links</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
-  
-        </div>
-        <!-- Grid column -->
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">Links</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Link 1</a>
-            </li>
-            <li>
-              <a href="#!">Link 2</a>
-            </li>
-            <li>
-              <a href="#!">Link 3</a>
-            </li>
-            <li>
-              <a href="#!">Link 4</a>
-            </li>
-          </ul>
-  
-        </div>
-        <!-- Grid column -->
-  
-      </div>
-      <!-- Grid row -->
-  
+<body STYLE="color:white; background:white">
+    <!-- Footer -->
+    <!-- Footer -->
+    <div class="footer">
+        <footer style="background: #212121; height:200%">
+
+            <!-- Footer Links -->
+            <div class="container-fluid text-center text-md-left">
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-md-6 mt-md-0 mt-3">
+
+                        <!-- Content -->
+                        <!-- <h5 class="text-uppercase">Footer Content</h5>-->
+                        <div id="copyright_and_image">
+                            <img src="/img/anturio_logo.png">
+                            <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
+                            <p id="copyright_anturio">All rights reserved</p>
+
+                        </div>
+                        <div id="social_media">
+                            <img id="social_media" src="/img/instagram.png">
+                            <img id="social_media" src="/img/ball.png">
+                            <img id="social_media" src="/img/twitter.png">
+                            <img id="social_media" src="/img/youtube.png">
+                        </div>
+                    </div>
+                    <!-- Grid column -->
+
+                    <hr class="clearfix w-100 d-md-none pb-3">
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 mb-md-0 mb-3">
+
+                        <!-- Links -->
+                        <h5 id="name_links">Empresa</h5>
+
+                        <ul class="list-unstyled" id="first_links">
+                            <li>
+                                <a href="#!">Construção</a>
+                            </li>
+                            <li>
+                                <a href="#!">Ind</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Testimonials</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 mb-md-0 mb-3">
+
+                        <!-- Links -->
+                        <h5 id="name_links">Support</h5>
+
+                        <ul class="list-unstyled" id="second_links">
+                            <li>
+                                <a href="#!">Help center</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms of service</a>
+                            </li>
+                            <li>
+                                <a href="#!">Legal</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Status</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Grid row -->
+
+            </div>
+            <!-- Footer Links -->
+
+
+        </footer>
+        <!-- Footer -->
     </div>
-    <!-- Footer Links -->
-  
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->
 </body>
+
 </html>
