--- a/www/index.html
+++ b/www/index.html
@@ -5,42 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="scripts/pageManager.js"></script>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+    <link rel="stylesheet" type="text/css"
+        href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <title>AnturioSystems</title>
 </head>
+
 <body>
 
 
 
-<!-- Barra de Navegação Global -->
+    <!-- Barra de Navegação Global -->
 
-<header>
-    <nav>
-       <div class="menu-icon">
-          <i class="fa fa-bars fa-2x"></i>
-       </div>
-       <div class="logo">
-          LOGO
-       </div>
-       <div class="menu">
-          <ul>
-             <li><a href="#">Home</a></li>
-             <li><a href="#">About</a></li>
-             <li><a href="#">Blog</a></li>
-             <li><a href="#">Contact</a></li>
-             <li><a href="#">Contact</a></li>
-             <li><a href="#">Contact</a></li>
-          </ul>
-       </div>
-    </nav>
- </header>
-
-
+    <header>
+        <nav>
+            <div class="menu-icon">
+                <i class="fa fa-bars fa-2x"></i>
+            </div>
+            <div class="logo">
+                LOGO
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
 
 
@@ -53,7 +54,9 @@
 
 
 
-<h1>Hello World</h1>
+
+
+    <h1>Hello World</h1>
 
 
 
@@ -62,8 +65,103 @@
 
 
 
- <!-- Footer -->
+    <!-- Footer -->
+    <div class="footer">
+        <footer style="background: #212121; height:200%">
 
+            <!-- Footer Links -->
+            <div class="container-fluid text-center text-md-left">
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-md-6 mt-md-0 mt-3">
+
+                        <!-- Content -->
+                        <!-- <h5 class="text-uppercase">Footer Content</h5>-->
+                        <div id="copyright_and_image">
+                            <img src="/img/anturio_logo.png">
+                            <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
+                            <p id="copyright_anturio">All rights reserved</p>
+
+                        </div>
+                        <div id="social_media">
+                            <img id="social_media" src="/img/instagram.png">
+                            <img id="social_media" src="/img/ball.png">
+                            <img id="social_media" src="/img/twitter.png">
+                            <img id="social_media" src="/img/youtube.png">
+                        </div>
+                    </div>
+                    <!-- Grid column -->
+
+                    <hr class="clearfix w-100 d-md-none pb-3">
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 mb-md-0 mb-3">
+
+                        <!-- Links -->
+                        <h5 id="name_links">Empresa</h5>
+
+                        <ul class="list-unstyled" id="first_links">
+                            <li>
+                                <a href="#!">Construção</a>
+                            </li>
+                            <li>
+                                <a href="#!">Ind</a>
+                            </li>
+                            <li>
+                                <a href="#!">Contact us</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Testimonials</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 mb-md-0 mb-3">
+
+                        <!-- Links -->
+                        <h5 id="name_links">Support</h5>
+
+                        <ul class="list-unstyled" id="second_links">
+                            <li>
+                                <a href="#!">Help center</a>
+                            </li>
+                            <li>
+                                <a href="#!">Terms of service</a>
+                            </li>
+                            <li>
+                                <a href="#!">Legal</a>
+                            </li>
+                            <li>
+                                <a href="#!">Privacy policy</a>
+                            </li>
+                            <li>
+                                <a href="#!">Status</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Grid row -->
+
+            </div>
+            <!-- Footer Links -->
+
+
+        </footer>
+        <!-- Footer -->
+    </div>
 
 </body>
+
 </html>
