--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="scripts/pageManager.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" type="text/css"
@@ -22,146 +20,138 @@
 
     <!-- Barra de Navegação Global -->
 
-    <header>
-        <nav>
-            <div class="menu-icon">
-                <i class="fa fa-bars fa-2x"></i>
-            </div>
-            <div class="logo">
-                LOGO
-            </div>
-            <div class="menu">
-                <ul>
+    <div class="wrapper">
+        <header>
+           <nav>
+              <div class="menu-icon">
+                 <i class="fa fa-bars fa-2x"></i>
+              </div>
+              <div class="logo">
+                 LOGO
+              </div>
+              <div class="menu">
+                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+                 </ul>
+              </div>
+           </nav>
+        </header>
+        <div class="content">
+<!-- Footer -->
+<div class="footer">
+    <footer style="background: #212121; height:200%">
 
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
 
+            <!-- Grid row -->
+            <div class="row">
 
+                <!-- Grid column -->
+                <div class="col-md-6 mt-md-0 mt-3">
 
-
-
-
-
-
-
-
-
-
-
-    <h1>Hello World</h1>
-
-
-
-
-
-
-
-
-    <!-- Footer -->
-    <div class="footer">
-        <footer style="background: #212121; height:200%">
-
-            <!-- Footer Links -->
-            <div class="container-fluid text-center text-md-left">
-
-                <!-- Grid row -->
-                <div class="row">
-
-                    <!-- Grid column -->
-                    <div class="col-md-6 mt-md-0 mt-3">
-
-                        <!-- Content -->
-                        <!-- <h5 class="text-uppercase">Footer Content</h5>-->
-                        <div id="copyright_and_image">
-                            <img src="/img/anturio_logo.png">
-                            <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
-                            <p id="copyright_anturio">All rights reserved</p>
-
-                        </div>
-                        <div id="social_media">
-                            <img id="social_media" src="/img/instagram.png">
-                            <img id="social_media" src="/img/ball.png">
-                            <img id="social_media" src="/img/twitter.png">
-                            <img id="social_media" src="/img/youtube.png">
-                        </div>
-                    </div>
-                    <!-- Grid column -->
-
-                    <hr class="clearfix w-100 d-md-none pb-3">
-
-                    <!-- Grid column -->
-                    <div class="col-md-3 mb-md-0 mb-3">
-
-                        <!-- Links -->
-                        <h5 id="name_links">Empresa</h5>
-
-                        <ul class="list-unstyled" id="first_links">
-                            <li>
-                                <a href="#!">Construção</a>
-                            </li>
-                            <li>
-                                <a href="#!">Ind</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contact us</a>
-                            </li>
-                            <li>
-                                <a href="#!">Pricing</a>
-                            </li>
-                            <li>
-                                <a href="#!">Testimonials</a>
-                            </li>
-                        </ul>
+                    <!-- Content -->
+                    <!-- <h5 class="text-uppercase">Footer Content</h5>-->
+                    <div id="copyright_and_image">
+                        <img src="/img/anturio_logo.png">
+                        <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
+                        <p id="copyright_anturio">All rights reserved</p>
 
                     </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-3 mb-md-0 mb-3">
-
-                        <!-- Links -->
-                        <h5 id="name_links">Support</h5>
-
-                        <ul class="list-unstyled" id="second_links">
-                            <li>
-                                <a href="#!">Help center</a>
-                            </li>
-                            <li>
-                                <a href="#!">Terms of service</a>
-                            </li>
-                            <li>
-                                <a href="#!">Legal</a>
-                            </li>
-                            <li>
-                                <a href="#!">Privacy policy</a>
-                            </li>
-                            <li>
-                                <a href="#!">Status</a>
-                            </li>
-                        </ul>
-
+                    <div id="social_media">
+                        <img id="social_media" src="/img/instagram.png">
+                        <img id="social_media" src="/img/ball.png">
+                        <img id="social_media" src="/img/twitter.png">
+                        <img id="social_media" src="/img/youtube.png">
                     </div>
-                    <!-- Grid column -->
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none pb-3">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-md-0 mb-3">
+
+                    <!-- Links -->
+                    <h5 id="name_links">Empresa</h5>
+
+                    <ul class="list-unstyled" id="first_links">
+                        <li>
+                            <a href="#!">Construção</a>
+                        </li>
+                        <li>
+                            <a href="#!">Ind</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contact us</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">Testimonials</a>
+                        </li>
+                    </ul>
 
                 </div>
-                <!-- Grid row -->
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-md-0 mb-3">
+
+                    <!-- Links -->
+                    <h5 id="name_links">Support</h5>
+
+                    <ul class="list-unstyled" id="second_links">
+                        <li>
+                            <a href="#!">Help center</a>
+                        </li>
+                        <li>
+                            <a href="#!">Terms of service</a>
+                        </li>
+                        <li>
+                            <a href="#!">Legal</a>
+                        </li>
+                        <li>
+                            <a href="#!">Privacy policy</a>
+                        </li>
+                        <li>
+                            <a href="#!">Status</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
 
             </div>
-            <!-- Footer Links -->
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
 
 
-        </footer>
-        <!-- Footer -->
-    </div>
+    </footer>
+    <!-- Footer -->
+</div>
 
+     </div>
+
+
+
+
+
+
+
+    
+
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
