--- a/www/index.html
+++ b/www/index.html
@@ -42,104 +42,135 @@
            </nav>
         </header>
         <div class="content">
-<!-- Footer -->
-<div class="footer">
-    <footer style="background: #212121; height:200%">
 
-        <!-- Footer Links -->
-        <div class="container-fluid text-center text-md-left">
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
+            <h1>HELLO WORLD</h1>
 
-            <!-- Grid row -->
-            <div class="row">
 
-                <!-- Grid column -->
-                <div class="col-md-6 mt-md-0 mt-3">
 
-                    <!-- Content -->
-                    <!-- <h5 class="text-uppercase">Footer Content</h5>-->
-                    <div id="copyright_and_image">
-                        <img src="/img/anturio_logo.png">
-                        <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
-                        <p id="copyright_anturio">All rights reserved</p>
+
+
+
+        <!-- Footer -->
+        <div class="footer">
+            <footer style="background: #212121; height:200%">
+
+                <!-- Footer Links -->
+                <div class="container-fluid text-center text-md-left">
+
+                    <!-- Grid row -->
+                    <div class="row">
+
+                        <!-- Grid column -->
+                        <div class="col-md-6 mt-md-0 mt-3">
+
+                            <!-- Content -->
+                            <!-- <h5 class="text-uppercase">Footer Content</h5>-->
+                            <div id="copyright_and_image">
+                                <img src="/img/anturio_logo.png">
+                                <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
+                                <p id="copyright_anturio">All rights reserved</p>
+
+                            </div>
+                            <div id="social_media">
+                                <img id="social_media" src="/img/instagram.png">
+                                <img id="social_media" src="/img/ball.png">
+                                <img id="social_media" src="/img/twitter.png">
+                                <img id="social_media" src="/img/youtube.png">
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+
+                        <hr class="clearfix w-100 d-md-none pb-3">
+
+                        <!-- Grid column -->
+                        <div class="col-md-3 mb-md-0 mb-3">
+
+                            <!-- Links -->
+                            <h5 id="name_links">Empresa</h5>
+
+                            <ul class="list-unstyled" id="first_links">
+                                <li>
+                                    <a href="#!">Construção</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Ind</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Contact us</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Testimonials</a>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-3 mb-md-0 mb-3">
+
+                            <!-- Links -->
+                            <h5 id="name_links">Support</h5>
+
+                            <ul class="list-unstyled" id="second_links">
+                                <li>
+                                    <a href="#!">Help center</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Terms of service</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Legal</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Privacy policy</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Status</a>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <!-- Grid column -->
 
                     </div>
-                    <div id="social_media">
-                        <img id="social_media" src="/img/instagram.png">
-                        <img id="social_media" src="/img/ball.png">
-                        <img id="social_media" src="/img/twitter.png">
-                        <img id="social_media" src="/img/youtube.png">
-                    </div>
-                </div>
-                <!-- Grid column -->
-
-                <hr class="clearfix w-100 d-md-none pb-3">
-
-                <!-- Grid column -->
-                <div class="col-md-3 mb-md-0 mb-3">
-
-                    <!-- Links -->
-                    <h5 id="name_links">Empresa</h5>
-
-                    <ul class="list-unstyled" id="first_links">
-                        <li>
-                            <a href="#!">Construção</a>
-                        </li>
-                        <li>
-                            <a href="#!">Ind</a>
-                        </li>
-                        <li>
-                            <a href="#!">Contact us</a>
-                        </li>
-                        <li>
-                            <a href="#!">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="#!">Testimonials</a>
-                        </li>
-                    </ul>
+                    <!-- Grid row -->
 
                 </div>
-                <!-- Grid column -->
+                <!-- Footer Links -->
 
-                <!-- Grid column -->
-                <div class="col-md-3 mb-md-0 mb-3">
 
-                    <!-- Links -->
-                    <h5 id="name_links">Support</h5>
-
-                    <ul class="list-unstyled" id="second_links">
-                        <li>
-                            <a href="#!">Help center</a>
-                        </li>
-                        <li>
-                            <a href="#!">Terms of service</a>
-                        </li>
-                        <li>
-                            <a href="#!">Legal</a>
-                        </li>
-                        <li>
-                            <a href="#!">Privacy policy</a>
-                        </li>
-                        <li>
-                            <a href="#!">Status</a>
-                        </li>
-                    </ul>
-
-                </div>
-                <!-- Grid column -->
+            </footer>
+            <!-- Footer -->
+        </div>
 
             </div>
-            <!-- Grid row -->
-
-        </div>
-        <!-- Footer Links -->
-
-
-    </footer>
-    <!-- Footer -->
-</div>
-
-     </div>
 
 
 
