Some changes on footer

--- a/www/index.html
+++ b/www/index.html
@@ -44,15 +44,16 @@
         </header>
         <div class="content">
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown button
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown button
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
-              </div>
+            </div>
 
             <h1 style="color:white">HELLO WORLD</h1>
             <h1 style="color:white">HELLO WORLD</h1>
@@ -97,13 +98,13 @@
                             </div>
                             <!-- Grid column -->
 
-                            <hr class="clearfix w-100 d-md-none pb-3">
+                            <hr id="clear_fix" class="clearfix w-100 d-md-none pb-3">
 
                             <!-- Grid column -->
-                            <div class="col-md-3 mb-md-0 mb-3">
+                            <div class="col-md-3 mb-md-0 mb-3" id="empresas">
 
                                 <!-- Links -->
-                                <h5 id="name_links">Empresa</h5>
+                                <h5 class="sector_empresa" id="name_links">Empresa</h5>
 
                                 <ul class="list-unstyled" id="first_links">
                                     <li>
@@ -112,7 +113,7 @@
                                     <li>
                                         <a href="#!">Ind</a>
                                     </li>
-                                     <li>
+                                    <li>
                                         <a href="#!">Contact us</a>
                                     </li>
                                     <li>
@@ -130,7 +131,7 @@
                             <div class="col-md-3 mb-md-0 mb-3">
 
                                 <!-- Links -->
-                                <h5 id="name_links">Support</h5>
+                                <h5 class="sector_support" id="name_links">Support</h5>
 
                                 <ul class="list-unstyled" id="second_links">
                                     <li>
@@ -152,7 +153,6 @@
 
                             </div>
                             <!-- Grid column -->
-
                         </div>
                         <!-- Grid row -->
 
