Change footer when resized (DOM)

--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,7 @@
 
                                 <!-- Content -->
                                 <!-- <h5 class="text-uppercase">Footer Content</h5>-->
-                                <img src="/img/anturio_logo.png">
+                                <img id="anturio_logo" src="/img/anturio_logo.png">
                                 <div class="col-md-6 mt-md-0 mt-3" id="items_to_move">
                                     <div id="copyright_and_image">
                                         <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
