--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@
                     <div class="container-fluid text-center text-md-left">
 
                         <!-- Grid row -->
-                        <div class="row">
+                        <div class="row" id="center_elements">
 
                             <!-- Grid column -->
                             <div class="col-md-6 mt-md-0 mt-3" id="copyright_web">
