--- a/www/index.html
+++ b/www/index.html
@@ -174,7 +174,7 @@
                             <div class="col-md-6 mt-md-0 mt-3" id="items_to_move">
                                 <div id="copyright_and_image">
                                     <p id="copyright_anturio">Copyright © 2021 Anturio Corporations.</p>
-                                    <p id="copyright_anturio">All rights reserved</p>
+                                    <p id="copyright_anturio2">All rights reserved</p>
 
                                 </div>
                                 <div id="social_media">
