--- a/www/index.html
+++ b/www/index.html
@@ -74,8 +74,8 @@
                             </div>
                         </div>
                     </li>
-                    <li><a href="#">Ser Anturiano</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><button class="dropbtn">Ser Anturiano</button></li>
+                    <li><button class="dropbtn">Blog</button></li>
                 </ul>
             </div>
             <div class="social-media">
