--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,10 @@
                 <ul>
                     <li>
                         <div class="dropdown">
-                            <button class="dropbtn">Setores</button>
+                            <button class="dropbtn">Setores <svg width="11" height="7" viewBox="0 0 7 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 0.75L3.5 3.25L6 0.75" stroke="white" stroke-opacity="0.74" stroke-width="0.8"/>
+                                </svg>
+                                </button>
                             <div class="dropdown-content">
                                 <a href="#">Construção</a>
                                 <a href="#">Distribuição</a>
