Media query to tablet

--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -135,7 +135,7 @@
 
 
 
-        <div id="diferent_sectors">
+        <div id="different_sectors">
             <div id="especialists_text">
                 <p>Somos especialistas</p>
                 <p>em diferentes setores<svg id="dot_point" width="9" height="9" viewBox="0 0 9 9" fill="none"
