Fim dos especialistas em X sectores. Falta arranjar o ponto svg vermelho

--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="scripts/pageManager.js"></script>
+    <script src="scripts/especialistas.js"></script>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style_especialistas.css">
     <link rel="stylesheet" type="text/css"
@@ -136,19 +137,16 @@
 
 
         <div id="different_sectors">
+            <div id="auxDiv"></div>
             <div id="especialists_text">
-                <p>Somos especialistas</p>
-                <p>em diferentes setores<svg id="dot_point" width="9" height="9" viewBox="0 0 9 9" fill="none"
+                <p>Somos especialistas<br>
+                em diferentes setores<svg id="dot_point" width="9" height="9" viewBox="0 0 9 9" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <circle cx="4.5" cy="4.5" r="4.5" fill="#ED1C23" />
                     </svg></p>
-
-
-
-
             </div>
             <div id="number_4">
-                <svg width="294" height="293" viewBox="0 0 294 293" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg id="svg_Number4" width="294" height="293" viewBox="0 0 294 293" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle opacity="0.3" cx="190.69" cy="195.117" r="97.7857" fill="#ED1C23" />
                     <circle opacity="0.1" cx="97.8763" cy="97.8834" r="97.7857" fill="#ED1C23" />
                     <circle opacity="0.1" cx="196.214" cy="97.8834" r="97.7857" fill="#ED1C23" />
@@ -161,8 +159,6 @@
                         d="M147.145 119.009C144.649 122.273 141.993 125.825 139.177 129.665C136.361 133.505 133.993 137.441 132.073 141.473H147.145V119.009ZM161.161 101.537V141.473H168.265V153.185H161.161V168.065H147.145V153.185H118.441V142.721C119.849 139.905 121.609 136.737 123.721 133.217C125.833 129.633 128.169 125.985 130.729 122.273C133.353 118.497 136.105 114.817 138.985 111.233C141.865 107.649 144.745 104.417 147.625 101.537H161.161Z"
                         fill="white" />
                 </svg>
-
-
 
             </div>
 
