Ponto vermelho ainda não fica alinhado em tablet e mobile. No entanto já muda conforme o ecrã

--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -140,10 +140,10 @@
             <div id="auxDiv"></div>
             <div id="especialists_text">
                 <p>Somos especialistas<br>
-                em diferentes setores<svg id="dot_point" width="9" height="9" viewBox="0 0 9 9" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <circle cx="4.5" cy="4.5" r="4.5" fill="#ED1C23" />
+                em diferentes setores<svg id="dot_point" width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="4.5" cy="4.5" r="4.5" fill="#ED1C23"/>
                     </svg></p>
+                    
             </div>
             <div id="number_4">
                 <svg id="svg_Number4" width="294" height="293" viewBox="0 0 294 293" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -164,7 +164,6 @@
 
 
         </div>
-
 
         <!-- Footer -->
         <div class="footer">
