Adicionado linha vermelha

--- a/www/index.html
+++ b/www/index.html
@@ -178,7 +178,7 @@
 
         </div>
 
-        <hr>
+        <hr id="first-hr">
         <div id="different_sectors">
             <div id="auxDiv"></div>
             <div id="especialists_text">
