--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -17,9 +17,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="scripts/pageManager.js"></script>
-    <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/especialistas.js"></script>
     <link rel="stylesheet" href="styles/style_especialistas.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" type="text/css"
         href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 
@@ -210,7 +210,7 @@
 
         </div>
 
-        <hr>
+        <hr id="first-hr">
         <div id="different_sectors">
             <div id="auxDiv"></div>
             <div id="especialists_text">
@@ -409,7 +409,6 @@
 
         </div>
         <!-- Fim de Div Construção, Indústria, Distribuição e TI-->
-
 
         <!-- Footer -->
         <div class="footer">
