--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,7 @@
 
 
       <!-- Conteúdo 1ª Àrea site--> 
-      
+
     <div class="content">
 
         <p id="title-1">
@@ -405,6 +405,22 @@
 
         </div>
         <!-- Fim de Div Construção, Indústria, Distribuição e TI-->
+
+
+
+        <!-- Inicio DIV somos a solução -->
+
+        <div id="we-solution">
+
+
+
+
+
+
+        </div>
+
+
+        <!-- Fim DIV somos a solução -->
 
         <!-- Footer -->
         <div class="footer">
